// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<RoomListPrimaryFilters /> stories > snapshots > renders Default story 1`] = `
<div>
  <div
    class="flex roomListPrimaryFilters"
    data-testid="primary-filters"
    style="--mx-flex-display: flex; --mx-flex-direction: row-reverse; --mx-flex-align: start; --mx-flex-justify: space-between; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
  >
    <div
      aria-label="Room list filters"
      class="flex list"
      id="_r_0_"
      role="listbox"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: wrap;"
    >
      <button
        aria-hidden="false"
        aria-selected="false"
        class="_chat-filter_5qdp0_8"
        role="option"
        tabindex="0"
      >
        Unreads
      </button>
      <button
        aria-hidden="false"
        aria-selected="false"
        class="_chat-filter_5qdp0_8"
        role="option"
        tabindex="0"
      >
        People
      </button>
      <button
        aria-hidden="false"
        aria-selected="false"
        class="_chat-filter_5qdp0_8"
        role="option"
        tabindex="0"
      >
        Rooms
      </button>
      <button
        aria-hidden="false"
        aria-selected="false"
        class="_chat-filter_5qdp0_8"
        role="option"
        tabindex="0"
      >
        Favourites
      </button>
      <button
        aria-hidden="false"
        aria-selected="false"
        class="_chat-filter_5qdp0_8"
        role="option"
        tabindex="0"
      >
        Mentions
      </button>
      <button
        aria-hidden="false"
        aria-selected="false"
        class="_chat-filter_5qdp0_8"
        role="option"
        tabindex="0"
      >
        Invites
      </button>
      <button
        aria-hidden="false"
        aria-selected="false"
        class="_chat-filter_5qdp0_8"
        role="option"
        tabindex="0"
      >
        Low priority
      </button>
    </div>
  </div>
</div>
`;

exports[`<RoomListPrimaryFilters /> stories > snapshots > renders NarrowContainer story 1`] = `
<div>
  <div
    style="width: 180px; border: 1px dashed var(--cpd-color-border-interactive-secondary);"
  >
    <div
      class="flex roomListPrimaryFilters"
      data-testid="primary-filters"
      style="--mx-flex-display: flex; --mx-flex-direction: row-reverse; --mx-flex-align: start; --mx-flex-justify: space-between; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
    >
      <div
        aria-label="Room list filters"
        class="flex list"
        id="_r_3_"
        role="listbox"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: wrap;"
      >
        <button
          aria-hidden="false"
          aria-selected="false"
          class="_chat-filter_5qdp0_8"
          role="option"
          tabindex="0"
        >
          People
        </button>
        <button
          aria-hidden="false"
          aria-selected="false"
          class="_chat-filter_5qdp0_8"
          role="option"
          tabindex="0"
        >
          Rooms
        </button>
        <button
          aria-hidden="false"
          aria-selected="false"
          class="_chat-filter_5qdp0_8"
          role="option"
          tabindex="0"
        >
          Unreads
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<RoomListPrimaryFilters /> stories > snapshots > renders NarrowWithActiveWrappingFilter story 1`] = `
<div>
  <div
    style="width: 180px; border: 1px dashed var(--cpd-color-border-interactive-secondary);"
  >
    <div
      class="flex roomListPrimaryFilters"
      data-testid="primary-filters"
      style="--mx-flex-display: flex; --mx-flex-direction: row-reverse; --mx-flex-align: start; --mx-flex-justify: space-between; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
    >
      <div
        aria-label="Room list filters"
        class="flex list"
        id="_r_4_"
        role="listbox"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: wrap;"
      >
        <button
          aria-hidden="false"
          aria-selected="false"
          class="_chat-filter_5qdp0_8"
          role="option"
          tabindex="0"
        >
          People
        </button>
        <button
          aria-hidden="false"
          aria-selected="false"
          class="_chat-filter_5qdp0_8"
          role="option"
          tabindex="0"
        >
          Rooms
        </button>
        <button
          aria-hidden="false"
          aria-selected="true"
          class="_chat-filter_5qdp0_8"
          role="option"
          tabindex="0"
        >
          Unreads
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<RoomListPrimaryFilters /> stories > snapshots > renders NoFilters story 1`] = `
<div>
  <div
    class="flex roomListPrimaryFilters"
    data-testid="primary-filters"
    style="--mx-flex-display: flex; --mx-flex-direction: row-reverse; --mx-flex-align: start; --mx-flex-justify: space-between; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
  >
    <div
      aria-label="Room list filters"
      class="flex list"
      id="_r_2_"
      role="listbox"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: wrap;"
    />
  </div>
</div>
`;

exports[`<RoomListPrimaryFilters /> stories > snapshots > renders PeopleSelected story 1`] = `
<div>
  <div
    class="flex roomListPrimaryFilters"
    data-testid="primary-filters"
    style="--mx-flex-display: flex; --mx-flex-direction: row-reverse; --mx-flex-align: start; --mx-flex-justify: space-between; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
  >
    <div
      aria-label="Room list filters"
      class="flex list"
      id="_r_1_"
      role="listbox"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: wrap;"
    >
      <button
        aria-hidden="false"
        aria-selected="false"
        class="_chat-filter_5qdp0_8"
        role="option"
        tabindex="0"
      >
        Unreads
      </button>
      <button
        aria-hidden="false"
        aria-selected="true"
        class="_chat-filter_5qdp0_8"
        role="option"
        tabindex="0"
      >
        People
      </button>
      <button
        aria-hidden="false"
        aria-selected="false"
        class="_chat-filter_5qdp0_8"
        role="option"
        tabindex="0"
      >
        Rooms
      </button>
      <button
        aria-hidden="false"
        aria-selected="false"
        class="_chat-filter_5qdp0_8"
        role="option"
        tabindex="0"
      >
        Favourites
      </button>
      <button
        aria-hidden="false"
        aria-selected="false"
        class="_chat-filter_5qdp0_8"
        role="option"
        tabindex="0"
      >
        Mentions
      </button>
      <button
        aria-hidden="false"
        aria-selected="false"
        class="_chat-filter_5qdp0_8"
        role="option"
        tabindex="0"
      >
        Invites
      </button>
      <button
        aria-hidden="false"
        aria-selected="false"
        class="_chat-filter_5qdp0_8"
        role="option"
        tabindex="0"
      >
        Low priority
      </button>
    </div>
  </div>
</div>
`;
